<resources>
    <string name="app_name">My Trip</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_travel">New Travel</string>
    <string name="travel_et_hint_enter_title">Enter travel title</string>
    <string name="add">Add</string>
    <string name="travel_title_empty">Travel title is empty</string>
    <string name="travel_city_empty">Travel city is empty</string>
    <string name="start_date_empty">Travel title is empty</string>
    <string name="end_date_empty">Travel title is empty</string>
    <string name="travel_et_hint_enter_place">Select city</string>
    <string name="travel_et_hint_enter_start_date">Select start date</string>
    <string name="travel_et_hint_enter_end_date">Select end date</string>
    <string name="travel_delete_activity_title">Delete</string>
    <string name="alert_title_delete_activity">Are you sure want to delete?</string>
    <string name="alert_message_delete_activity">All data for this travel will be permanently deleted</string>
    <string name="sort_menu_title">Sort</string>
    <string name="action_sort_default_title">Default</string>
    <string name="action_sort_travel_asc_title">Travel title ascending</string>
    <string name="action_sort_travel_desc_title">Travel title descending</string>
    <string name="action_sort_start_asc_title">Start date ascending</string>
    <string name="action_sort_start_desc_title">Start date descending</string>
    <string name="title_frag_diary">Diary</string>
    <string name="title_frag_expenses">Expenses</string>
    <string name="title_frag_daily_plans">Daily Plans</string>
</resources>
