<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="vtcac.thuhuong.mytrip.MainActivity">
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_by_alpha"
        android:orderInCategory="100"
        android:title="@string/sort_menu_title"
        app:showAsAction="ifRoom|withText" >
        <menu>
            <group android:id="@+id/action_sort_group"
                android:checkableBehavior="single">
                <item android:id="@+id/action_sort_default"
                    android:title="@string/action_sort_default_title"/>
                <item android:id="@+id/action_sort_travel_asc"
                    android:title="@string/action_sort_travel_asc_title"/>
                <item android:id="@+id/action_sort_travel_desc"
                    android:title="@string/action_sort_travel_desc_title"/>
                <item android:id="@+id/action_sort_start_asc"
                    android:title="@string/action_sort_start_asc_title"/>
                <item android:id="@+id/action_sort_start_desc"
                    android:title="@string/action_sort_start_desc_title"/>
            </group>
        </menu>
    </item>

</menu>
